Create Basket Microservice

--- a/src/Service/Basket/Basket.API/appsettings.json
+++ b/src/Service/Basket/Basket.API/appsettings.json
@@ -1,9 +1,6 @@
 {
-  "DatabaseSetting": {
-    "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "ProducteDb",
-    "CollectionsName": "Products"
-
+  "CacheSetting": {
+    "ConnectionString": "localhost:6379"
   },
   "Logging": {
     "LogLevel": {
